force-app/main/default/objects/PartnerSync_Event__e/PartnerSync_Event__e.object-meta.xml
<CustomObject>
    <label>PartnerSync Event</label>
    <pluralLabel>PartnerSync Events</pluralLabel>
</CustomObject>