force-app/main/default/objects/PartnerSync_Event__e/fields/Causation_Id__c.field-meta.xml
<CustomField><fullName
  >Causation_Id__c</fullName><label>Causation Id</label><length
  >100</length><type>Text</type></CustomField>