force-app/main/default/objects/PartnerSync_Event__e/fields/Correlation_Id__c.field-meta.xml
<CustomField><fullName
  >Correlation_Id__c</fullName><label>Correlation Id</label><length
  >100</length><type>Text</type></CustomField>