force-app/main/default/objects/PartnerSync_Event__e/fields/Event_Id__c.field-meta.xml
<CustomField><fullName
  >Event_Id__c</fullName><label>Event Id</label><length>64</length><type
  >Text</type></CustomField>