force-app/main/default/objects/PartnerSync_Event__e/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <description
  >Business event type discriminator, e.g. DealSubmitted, MDFApproved.</description>
    <label>Event Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>