force-app/main/default/objects/PartnerSync_Event__e/fields/Event_Version__c.field-meta.xml
<CustomField><fullName
  >Event_Version__c</fullName><label>Event Version</label><length
  >20</length><type>Text</type></CustomField>