force-app/main/default/objects/PartnerSync_Event__e/fields/Idempotency_Key__c.field-meta.xml
<CustomField><fullName
  >Idempotency_Key__c</fullName><label>Idempotency Key</label><length
  >255</length><type>Text</type></CustomField>