force-app/main/default/objects/PartnerSync_Event__e/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <description
  >API name of the object the related record belongs to.</description>
    <label>Object Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>