force-app/main/default/objects/PartnerSync_Event__e/fields/Occurred_On__c.field-meta.xml
<CustomField>
    <fullName>Occurred_On__c</fullName>
    <description>Timestamp the underlying business event occurred.</description>
    <label>Occurred On</label>
    <type>DateTime</type>
</CustomField>