force-app/main/default/objects/PartnerSync_Event__e/fields/Partner_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Partner_Account_Id__c</fullName>
    <description
  >Id of the partner account associated with this event.</description>
    <label>Partner Account Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>