force-app/main/default/objects/PartnerSync_Event__e/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <description>Id of the record the event relates to.</description>
    <label>Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>