force-app/main/default/objects/PartnerSync_Event__e/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <description>Event severity, e.g. Info, Warning, Error.</description>
    <label>Severity</label>
    <length>50</length>
    <type>Text</type>
</CustomField>