force-app/main/default/objects/PartnerSync_Event__e/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <description>Short human-readable summary of the event.</description>
    <label>Summary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>